# TennisApp

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py  requirements.txt  tennis_game.py
backend/tests/: conftest.py  test_endpoints.py  test_tennis_integration.py  test_tennis_logic.py  test_tennis_unit.py  test_unit.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: loading.js
frontend/src/components/common/: Button.js  ErrorMessage.js  Loading.js
frontend/src/components/game/: Game.js  PlayerCard.js  ScoreboardHeader.js  WinnerBanner.js
frontend/src/components/start/: start.js
frontend/src/hooks/: useGameData.js
frontend/src/services/: gameService.js
tennis_backend/: __init__.py  main.py
tennis_backend/tests/: conftest.py  test_endpoints.py  test_tennis_integration.py  test_tennis_unit.py  test_unit.py
